--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href='/about.html'>About us</a>
+                            <a class="nav-link" href='/bootstap-website/about.html'>About us</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -43,7 +43,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href='/contact.html'>Contact us</a>
+                            <a class="nav-link" href='/bootstap-website/contact.html'>Contact us</a>
                         </li>
                     </ul>
                     <form class="d-flex">
