--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href='/contact.html'>Contact us</a>
+                            <a class="nav-link" href='/bootstap-website/contact.html'>Contact us</a>
                         </li>
                     </ul>
                     <form class="d-flex">
