--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="/">Home</a>
+                        <a class="nav-link " aria-current="page" href="/bootstap-website/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href='/about.html'>About us</a>
+                        <a class="nav-link active" href="/bootstap-website/about.html">About us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href='/contact.html'>Contact us</a>
+                        <a class="nav-link" href="/bootstap-website/contact.html">Contact us</a>
                     </li>
                 </ul>
                 <form class="d-flex">
