--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/bootstap-website/contact.html">Contact us</a>
+                        <a class="nav-link" href="/bootstap-website/contact">Contact us</a>
                     </li>
                 </ul>
                 <form class="d-flex">
