--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="/bootstap-website/index.html">Home</a>
+                        <a class="nav-link " aria-current="page" href="/bootstap-website/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="/bootstap-website/about.html">About us</a>
