--- a/contact.html
+++ b/contact.html
@@ -24,11 +24,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="/">Home</a>
+                     <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="/bootstap-website/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href='/about.html'>About us</a>
+                        <a class="nav-link active" href="/bootstap-website/about.html">About us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href='/contact.html'>Contact us</a>
+                        <a class="nav-link" href="/bootstap-website/contact">Contact us</a>
                     </li>
                 </ul>
                 <form class="d-flex">
